--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <kotlin.version>1.5.30</kotlin.version>
         <cassandra.version>4.13.0</cassandra.version>
         <slf4j.version>2.0.0-alpha4</slf4j.version>
+        <kotlinx-coroutines.version>1.5.1</kotlinx-coroutines.version>
     </properties>
 
     <dependencies>
@@ -47,7 +48,6 @@
             <artifactId>java-driver-core</artifactId>
             <version>${cassandra.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.datastax.oss</groupId>
             <artifactId>java-driver-query-builder</artifactId>
@@ -67,22 +67,29 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>${kotlinx-coroutines.version}</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-reactor</artifactId>
+            <version>${kotlinx-coroutines.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>io.reactivex.rxjava3</groupId>
             <artifactId>rxjava</artifactId>
             <version>3.1.0</version>
         </dependency>
-
         <dependency>
             <groupId>io.reactivex.rxjava3</groupId>
             <artifactId>rxkotlin</artifactId>
@@ -104,7 +111,7 @@
         <dependency>
             <groupId>io.github.microutils</groupId>
             <artifactId>kotlin-logging-jvm</artifactId>
-            <version>2.0.10</version>
+            <version>2.0.11</version>
         </dependency>
 
         <dependency>
@@ -147,7 +154,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.minus.git.server.Server</mainClass>
+                            <mainClass>com.minus.git.reactive.Server</mainClass>
 
                         </manifest>
                     </archive>
