--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.data.cassandra.port=9042
 #spring.data.cassandra.schema-action=NONE
 
 
+spring.security.user.name=foo
+spring.security.user.password=bar
+spring.jackson.serialization.indent_output=true
