--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-gradify.cassandra.isEnabled = true
+gradify.git-server.isEnabled=false
+gradify.http2.isEnabled=false
+gradify.reactive-server.isEnabled=true
 
+gradify.cassandra.isEnabled=true
+git.server.port=9045
 spring.data.cassandra.contact-points=127.0.0.1
 spring.data.cassandra.port=9042
 
@@ -7,8 +11,20 @@ spring.data.cassandra.port=9042
 #spring.data.cassandra.password=<password, if any>
 #spring.data.cassandra.keyspace=default
 #spring.data.cassandra.schema-action=NONE
+#logging.level.io.netty=DEBUG
+#logging.level.root=DEBUG
+#logging.level.org.springframework.web=DEBUG
 
-
+logging.level.root=info
+#logging.level.io.netty=DEBUG
 spring.security.user.name=foo
 spring.security.user.password=bar
-spring.jackson.serialization.indent_output=true
+#spring.jackson.serialization.indent_output=true
+#debug=true
+#
+#server.compression.enabled=true
+#server.port=8443
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=password
+#server.ssl.key-password=foo
+#server.http2.enabled=true
