--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,28 @@
 gradify.git-server.isEnabled=false
 gradify.http2.isEnabled=false
 gradify.reactive-server.isEnabled=true
-
+gradify.reactive-server.port=6480
+gradify.ssl.store-pass=${GRADIFY_SSL_STORE_PASS}}
 gradify.cassandra.isEnabled=true
-git.server.port=9045
-spring.data.cassandra.contact-points=127.0.0.1
-spring.data.cassandra.port=9042
+gradify.git.server.host=localhost
+gradify.git.server.port=9045
+gradify.git.server.jks=certs/server/server.jks
 
-#spring.data.cassandra.username=<username, if any>
-#spring.data.cassandra.password=<password, if any>
-#spring.data.cassandra.keyspace=default
-#spring.data.cassandra.schema-action=NONE
-#logging.level.io.netty=DEBUG
-#logging.level.root=DEBUG
-#logging.level.org.springframework.web=DEBUG
 
-logging.level.root=info
-#logging.level.io.netty=DEBUG
 spring.security.user.name=foo
 spring.security.user.password=bar
 #spring.jackson.serialization.indent_output=true
 #debug=true
-#
-#server.compression.enabled=true
-#server.port=8443
-#server.ssl.key-store=classpath:keystore.jks
-#server.ssl.key-store-password=password
-#server.ssl.key-password=foo
-#server.http2.enabled=true
+
+spring.data.cassandra.contact-points=127.0.0.1
+spring.data.cassandra.port=9042
+#spring.data.cassandra.username=<username, if any>
+#spring.data.cassandra.password=<password, if any>
+#spring.data.cassandra.keyspace=default
+#spring.data.cassandra.schema-action=NONE
+
+#logging.level.io.netty=DEBUG
+#logging.level.root=DEBUG
+#logging.level.org.springframework.web=DEBUG
+logging.level.org=info
+#logging.level.io.netty=DEBUG
