logging - level info git caps docs minor application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ gradify.git-server.isEnabled=false
 gradify.http2.isEnabled=false
 gradify.reactive-server.isEnabled=true
 gradify.reactive-server.port=6480
+gradify.ssl.store=certs/server/server.jks
 gradify.ssl.store-pass=${GRADIFY_SSL_STORE_PASS}}
 gradify.cassandra.isEnabled=true
 gradify.git.server.host=localhost
-gradify.git.server.port=9045
-gradify.git.server.jks=certs/server/server.jks
+gradify.git.server.port=6480
 
 
 spring.security.user.name=foo
